# Qt_Creator

./: README.md
MyPartice/Ambient-lighting/: CMakeLists.txt  main.cpp
MyPartice/Ambient-lighting/Mylib/: camera.cpp  camera.h  gl_setup.cpp
MyPartice/Ambient-lighting/build-Ambient-lighting-Desktop-Default/: Ambient-lighting  Ambient-lighting.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
MyPartice/Ambient-lighting/shaderSource/: fragmentShaderSource.glsl  vertexShaderSource.glsl
MyPartice/Camera-Coordinate/: CMakeLists.txt  main.cpp
MyPartice/Camera-Coordinate/Mylib/: camera.h  gl_setup.cpp  gl_setup.h  texture.cpp  texture.h
MyPartice/Camera-Coordinate/build-Camera-Coordinate-Desktop-Default/: CMakeCache.txt  Camera-Coordinate  Camera-Coordinate.cbp  Makefile  cmake_install.cmake
MyPartice/Color/: CMakeLists.txt  CMakeLists.txt.user.c1bcde4  main.cpp
MyPartice/Color/Mylib/: camera.cpp
MyPartice/Color/build-Color-Desktop-Default/: CMakeCache.txt  Color  Color.cbp  Makefile  cmake_install.cmake
MyPartice/Color/shaderSource/: fragmentShaderSource.glsl
MyPartice/Coordinate/: CMakeLists.txt  main.cpp
MyPartice/Coordinate-dynamic/: CMakeLists.txt  main.cpp
MyPartice/Coordinate-dynamic/Mylib/: gl_setup.cpp  gl_setup.h  stb_image.h  texture.cpp
MyPartice/Coordinate-dynamic/build-Coordinate-dynamic-Desktop-Default/: CMakeCache.txt  Coordinate-dynamic  Coordinate-dynamic.cbp  Makefile  cmake_install.cmake
MyPartice/Coordinate/Mylib/: shader.cpp  shader.h  texture.h
MyPartice/GL_Cmake/: CMakeLists.txt  main.cpp
MyPartice/GL_Qmake/: GL_Qmake.pro  main.cpp
MyPartice/Lighting-BasisSpecular/: CMakeLists.txt  main.cpp
MyPartice/Texture/: CMakeLists.txt  main.cpp
MyPartice/Transformations/: CMakeLists.txt  main.cpp
MyPartice/Triangle/: CMakeLists.txt  main.cpp
MyPartice/Triangle-ChangCol/: CMakeLists.txt  main.cpp
MyPartice/Triangle-VerTexGradCol/: CMakeLists.txt  main.cpp
MyPartice/Triangle-VerTexGradCol/build-Triangle-VerTexGradCol-Desktop-Default/: CMakeCache.txt  Makefile  Triangle-VerTexGradCol  Triangle-VerTexGradCol.cbp  cmake_install.cmake
MyPartice/VIA_car/: CMakeLists.txt  main.cpp
MyPartice/VIA_car/assim_models/Crane_qt/: Crane_qt.mtl
MyPartice/VIA_car/assim_models/Crane_qt/body/: body.mtl
MyPartice/VIA_car/assim_models/Crane_qt/grab/: grab.mtl
MyPartice/VIA_car/assim_models/Crane_qt/head/: head.mtl
MyPartice/VIA_car/assim_models/Crane_qt/wheel/: wheel.mtl
MyPartice/VIA_car/assim_models/Van_qt/: Van_qt.mtl
MyPartice/VIA_car/assim_models/Van_qt/body/: body.mtl
MyPartice/VIA_car/headers/: camera.h  gl_setup.h  lightdirectional.h  lightpoint.h  lightspot.h  material.h  mesh.h  model.h  shader.h  stb_image.h  texture.h
MyPartice/VIA_car/shaderSource/: fragmentShaderSource.glsl  vertexShaderSource.glsl
MyPartice/VIA_car/sources/: camera.cpp  gl_setup.cpp  lightdirectional.cpp  lightpoint.cpp  lightspot.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
MyPartice/moreCoordinate/: CMakeLists.txt  main.cpp
MyPartice/readShaderFile/: CMakeLists.txt  main.cpp
MyPartice/readShaderFile/build-readShaderFile-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  readShaderFile  readShaderFile.cbp
MyPartice/readShaderFile/source/: fragmentShaderSource.glsl  vertexShaderSource.glsl
(+50 files in other folders)
